--- a/.gitignore
+++ b/.gitignore
@@ -6,16 +6,16 @@
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
-*/__pycache__/*
+**/__pycache__/*
 
 *.bin*
 *.txt
+retrieval/model/autoencoder/output
 .idea/*
-retrieval/model/autoencoder/*
+
 test.py
 
 image/*
-!image/test/*
 
 # User-specific stuff
 .idea/**/workspace.xml
